--- a/index.html
+++ b/index.html
@@ -107,9 +107,13 @@
               <path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
               <path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z" />
             </svg></h2>
+        </div>
           <br>
+         <div class="col-3">
           <img src="https://imgur.com/1MSOF4B.jpg" alt="ProfilePic" hspace=30px style=" width: 210px; height: 210px;
            float: left; border: 1px solid #555;" />
+        </div>
+         <div class="col-9">
           <p>Let me introduce myself, my name is Sai Varshith Reddy Ankireddypalle or just Varshith. Though I was
             born in Andhra Pradesh, I grew up in Pune, Maharashtra. I am 17 with the desire to learn and excel in the
             field of Computer Science and currently pursiung the same at VIT Chennai. Though I have not mastered every
@@ -134,6 +138,7 @@
               </svg> </a>
 
           </p>
+           </div
         </div>
       </div>
     </div>
