--- a/index.html
+++ b/index.html
@@ -108,12 +108,16 @@
               <path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z" />
             </svg></h2>
         </div>
-          <br>
-         <div class="col-3">
+      </div>
+    </div>
+    <br>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3 col-md-3">
           <img src="https://imgur.com/1MSOF4B.jpg" alt="ProfilePic" hspace=30px style=" width: 210px; height: 210px;
-           float: left; border: 1px solid #555;" />
+             float: left; border: 1px solid #555;" />
         </div>
-         <div class="col-9">
+        <div class="col-md-9 col-md-3">
           <p>Let me introduce myself, my name is Sai Varshith Reddy Ankireddypalle or just Varshith. Though I was
             born in Andhra Pradesh, I grew up in Pune, Maharashtra. I am 17 with the desire to learn and excel in the
             field of Computer Science and currently pursiung the same at VIT Chennai. Though I have not mastered every
@@ -136,12 +140,12 @@
                 <path
                   d="M7 9.5C7 8.672 6.552 8 6 8s-1 .672-1 1.5.448 1.5 1 1.5 1-.672 1-1.5zm4 0c0-.828-.448-1.5-1-1.5s-1 .672-1 1.5.448 1.5 1 1.5 1-.672 1-1.5z" />
               </svg> </a>
-
+  
           </p>
-        </div>
         </div>
       </div>
     </div>
+  
   </section>
   <br>
   <section id="Skills">
