--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               <p> I believe that success should be measured in amounts of I have grown as a human being, how much have I
                 learnt, how many bonds I have
                 made, how many memories I have created. I believe that enjoying the process rather than stressing about
-                the destination is more important and fruitful, beacuse it is our journey that reminds us what we have
+                the destination is more important and fruitful, because it is our journey that reminds us what we have
                 gone through, how much effort we have put in and how much we have grown as a human being.
               </p>
             </div>
